# world-model-friends

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  README.md  config.yaml  main.py  pyproject.toml  ruff.toml  test_logic.py  tmp.py
data_wrangling/: loader.py
src/: cli.py
tests/: test_ai.py  test_script_sequencer.py
tests/integration/: test_compile_datasets.py  test_compile_datasets_fixed.py  test_embeddings_integration.py  test_train_integration.py
tests/unit/ai/: test_embeddings.py
tests/unit/data_wrangling/: test_io.py  test_script_sequencer.py
tests/unit/decoder/: test_decoder.py
tests/unit/encoder/: test_embeddings.py
tests/unit/predictor/: test_dataset.py  test_jepa.py  test_train.py
tests/unit/world_model/: test_dataset.py  test_jepa.py  test_train.py
world_model_friends/: cli.py  config.py
world_model_friends/ai/: __init__.py  embeddings.py
world_model_friends/data_wrangling/: __init__.py  compile_datasets.py  io.py  script_sequencer.py
world_model_friends/decoder/: __init__.py  vector_search_decoder.py
world_model_friends/encoder/: __init__.py  embeddings.py  model.py
world_model_friends/predictor/: dataset.py  evaluate.py  inference.py  jepa.py  train.py
world_model_friends/world_model/: dataset.py  evaluate.py  jepa.py  model.py  train.py
