[project]
name = "world-model-friends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "polars>=1.41.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
compile-datasets = "world_model_friends.cli:compile_datasets"

[tool.uv]
package = true

[tool.setuptools]
packages = ["world_model_friends"]
