[project]
name = "world-model-friends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "polars>=1.41.2",
    "sentence-transformers>=3.0.0",
    "torch>=2.4.0",
    "PyYaml>=6.0.3",
    "tqdm>=4.67.3",
]

[project.scripts]
compile-datasets = "world_model_friends.cli:compile_datasets"
train-world-model = "world_model_friends.cli:train_world_model"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["world_model_friends"]
